View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031279 | Open CASCADE | OCCT:Visualization | public | 2019-12-26 13:52 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing | ||||
Description | Environment texture displayed as background in Ray-Tracing is misplaced (note that it is not the same for Path-Tracing). | ||||
Steps To Reproduce | v3d/raytrace/bug31279 | ||||
Tags | No tags attached. | ||||
Test case number | v3d/raytrace/bug31279 | ||||
|
raytrace_env_KO.png (60,259 bytes) |
|
Branch CR31279 has been created by mzernova. SHA-1: 4896ceb96f916fcfb8ca2b2adde25716d8bdfb99 Detailed log of new commits: Author: mzernova Date: Mon Jan 13 10:21:10 2020 +0300 0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing Fixed problem with misplacing background texture in Ray-Tracing. |
|
http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31279-master-mzernova |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: ea849b911aacb0dc16778413b8288c310cd91660 |
|
Branch CR31279 has been updated by mzernova. SHA-1: f584056b2c9e547ce86927eb5923910242a1df6c Detailed log of new commits: Author: mzernova Date: Tue Jan 14 17:52:49 2020 +0300 Fixed problem with refraction. |
|
Branch CR31279_1 has been created by mzernova. SHA-1: dce76b7d3027628efe0f88bda6db2b0a61698c2a Detailed log of new commits: Author: mzernova Date: Mon Jan 13 10:21:10 2020 +0300 0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing Fixed problem with misplacing background texture in Ray-Tracing. |
|
The patch CR31279 is ready to review |
|
Test case should be created for testing this bug. |
|
Branch CR31279 has been updated by mzernova. SHA-1: 6f28d4f16566fd2bcb7e70c1083d091d480ebaac Detailed log of new commits: Author: mzernova Date: Wed Jan 15 16:20:03 2020 +0300 Add test |
|
Branch CR31279_1 has been updated forcibly by mzernova. SHA-1: 05ae8e9a792d502ba8a483d8c184f8ee5b9ed8d8 |
|
The patch CR31279 is ready to review |
|
Branch CR31279 has been updated by mzernova. SHA-1: e20dc9c27f42970fab9b798ec330b667c9f28e8a Detailed log of new commits: Author: mzernova Date: Thu Jan 16 10:59:41 2020 +0300 remarks from osa |
|
Branch CR31279_1 has been updated forcibly by mzernova. SHA-1: e4789769f9a5ab22c12ca12d239a917d6c3e42d5 |
|
I can not take this fix to IR because: http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31279-master-mzernova/view/COMPARE/job/CR31279-master-mzernova-OCCT-Windows-64-VC14-opt-test-compare/ Problem v3d raytrace bug31279 is permanently reproduced I restarted 5 time |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: a6c3ba80282aec9521ccf227eab3835290f2c10c |
|
Branch CR31279_1 has been updated forcibly by mzernova. SHA-1: 3a90182681cf6181b23a3cb3cf938da669062a3b |
|
Branch CR31279 has been updated by mzernova. SHA-1: 782425d2302a3406768f3bd035c7780910788ab3 Detailed log of new commits: Author: mzernova Date: Wed Feb 19 19:14:52 2020 +0300 fixed the problem that caused FLT OVERFLOW |
|
Branch CR31279_1 has been updated forcibly by mzernova. SHA-1: d1d282552c6c2121d039c9a7f4d7ac9786b1703d |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 9cc46155ad50464c66a4bf81e31a36fb61529975 |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 3cdf94efd0091ebc63ca1b14ace95b7221f3011d |
|
Branch CR31279 has been updated by mzernova. SHA-1: 027cfe91148af2161d6881b8364c92e7af975f86 Detailed log of new commits: Author: mzernova Date: Fri Mar 6 11:32:08 2020 +0300 # |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: f0be9f08ea73d85f13f69a26598b1eb887a7df5a |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 4b16a3b0a2c3ffde064601c641083aa49bafd503 |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 7b1c3f6e082d6350ccb8d5d76e295abcfa4f140d |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 298af3741f07cfebbc4b9ea46024495c7827aa23 |
|
Branch CR31279 has been updated forcibly by mzernova. SHA-1: 4067625494d916b243c47bb5a501e90beffec74d |
|
Branch CR31279_1 has been updated forcibly by mzernova. SHA-1: 7b7197756d1cdf333d844131d72503a66b0ab5aa |
|
The patch CR31279 is ready to review |
|
Please raise the patch in OCCT branch CR31279_1. |
|
Combination - OCCT branch : IR-2020-06-26 master SHA - 832a6f4412321ca784bbb36916dc740d04a05c0c a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-06-26 SHA - 180ab3ca4e501bda3da57c99a8ac8b220db33df3 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17164.36000000016 / 17160.400000000114 [+0.02%] Products Total CPU difference: 11173.720000000081 / 11197.400000000112 [-0.21%] Windows-64-VC14: OCCT Total CPU difference: 18707.65625 / 18650.578125 [+0.31%] Products Total CPU difference: 13062.6875 / 13012.71875 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31279_1 has been deleted by inv. SHA-1: 7b7197756d1cdf333d844131d72503a66b0ab5aa |
|
Branch CR31279 has been deleted by inv. SHA-1: 4067625494d916b243c47bb5a501e90beffec74d |
occt: master 832a6f44 2020-01-13 07:21:10 Committer: bugmaster Details Diff |
0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing Fixed problem with misplacing background texture in Ray-Tracing. An environment background is always drawn using a perspective matrix. |
Affected Issues 0031279 |
|
mod - src/OpenGl/OpenGl_View_Raytrace.cxx | Diff File | ||
mod - src/Shaders/RaytraceBase.fs | Diff File | ||
mod - src/Shaders/Shaders_RaytraceBase_fs.pxx | Diff File | ||
add - tests/v3d/raytrace/bug31279 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-26 13:52 | kgv | New Issue | |
2019-12-26 13:52 | kgv | Assigned To | => mzernova |
2019-12-26 13:52 | kgv | File Added: raytrace_env_KO.png | |
2019-12-26 13:53 | kgv | Relationship added | related to 0031225 |
2020-01-13 12:01 | git | Note Added: 0089865 | |
2020-01-13 12:06 | mzernova | Note Added: 0089866 | |
2020-01-14 11:11 | git | Note Added: 0089881 | |
2020-01-14 18:01 | git | Note Added: 0089888 | |
2020-01-14 18:01 | git | Note Added: 0089889 | |
2020-01-14 19:14 | mzernova | Note Added: 0089891 | |
2020-01-14 19:14 | mzernova | Assigned To | mzernova => kgv |
2020-01-14 19:14 | mzernova | Status | new => resolved |
2020-01-14 19:14 | mzernova | Steps to Reproduce Updated | |
2020-01-14 20:02 | kgv | Note Added: 0089892 | |
2020-01-14 20:41 | kgv | Assigned To | kgv => mzernova |
2020-01-14 20:41 | kgv | Status | resolved => assigned |
2020-01-14 20:44 | kgv | Steps to Reproduce Updated | |
2020-01-14 20:44 | kgv | Product Version | 7.3.0 => 7.0.0 |
2020-01-14 20:46 | kgv | Relationship added | child of 0024130 |
2020-01-15 16:26 | git | Note Added: 0089900 | |
2020-01-15 16:26 | git | Note Added: 0089901 | |
2020-01-15 16:32 | mzernova | Note Added: 0089902 | |
2020-01-15 16:32 | mzernova | Assigned To | mzernova => kgv |
2020-01-15 16:32 | mzernova | Status | assigned => resolved |
2020-01-15 16:32 | mzernova | Steps to Reproduce Updated | |
2020-01-15 16:35 | kgv | Assigned To | kgv => osa |
2020-01-16 11:06 | git | Note Added: 0089910 | |
2020-01-16 11:06 | git | Note Added: 0089911 | |
2020-01-17 12:16 | osa | Assigned To | osa => bugmaster |
2020-01-17 12:16 | osa | Status | resolved => reviewed |
2020-01-17 16:02 | bugmaster | Test case number | => v3d/raytrace/bug31279 |
2020-01-17 20:47 | bugmaster | Note Added: 0089934 | |
2020-01-17 20:48 | bugmaster | Assigned To | bugmaster => mzernova |
2020-01-17 20:48 | bugmaster | Status | reviewed => assigned |
2020-01-17 20:51 | bugmaster | Note Edited: 0089934 | |
2020-02-19 15:37 | git | Note Added: 0090595 | |
2020-02-19 15:38 | git | Note Added: 0090596 | |
2020-02-19 19:20 | git | Note Added: 0090599 | |
2020-02-19 19:20 | git | Note Added: 0090600 | |
2020-02-20 10:33 | git | Note Added: 0090602 | |
2020-06-24 10:10 | git | Note Added: 0092686 | |
2020-06-24 17:11 | git | Note Added: 0092698 | |
2020-06-24 19:14 | git | Note Added: 0092701 | |
2020-06-24 23:23 | git | Note Added: 0092705 | |
2020-06-25 10:23 | git | Note Added: 0092709 | |
2020-06-25 13:13 | git | Note Added: 0092712 | |
2020-06-25 13:14 | git | Note Added: 0092713 | |
2020-06-25 21:48 | git | Note Added: 0092739 | |
2020-06-25 21:49 | mzernova | Note Added: 0092740 | |
2020-06-25 21:49 | mzernova | Assigned To | mzernova => kgv |
2020-06-25 21:49 | mzernova | Status | assigned => resolved |
2020-06-25 22:25 | kgv | Note Added: 0092741 | |
2020-06-25 22:25 | kgv | Assigned To | kgv => bugmaster |
2020-06-25 22:25 | kgv | Status | resolved => reviewed |
2020-06-28 11:28 | bugmaster | Note Added: 0092792 | |
2020-06-28 11:28 | bugmaster | Status | reviewed => tested |
2020-06-28 12:35 | bugmaster | Changeset attached | => occt master 832a6f44 |
2020-06-28 12:35 | bugmaster | Status | tested => verified |
2020-06-28 12:35 | bugmaster | Resolution | open => fixed |
2020-06-28 12:48 | git | Note Added: 0092797 | |
2020-06-28 12:48 | git | Note Added: 0092800 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |