0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing

Fixed problem with misplacing background texture in Ray-Tracing.

An environment background is always drawn using a perspective matrix.